# .github

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  Justfile  README.md  SECURITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: deploy.yml  planning.yml
architecture/: README.md  brand-marks.md  community.md  org-profile.md  site-branding.md
brand/: README.md  STORY.md
brand/apparel/: README.md
docs/: CNAME  DEPLOYMENT.md  index.md  robots.txt
docs/stylesheets/: extra.css
docs/superpowers/: launch-playbook.md
overrides/: main.html
planning/: README.md  deferred.md  launch-playbook.md
planning/changes/: 2026-06-24.01-promotion-strategy.md  2026-06-24.02-org-community-health-defaults.md  2026-06-27.01-community-channels.md  2026-06-28.01-org-favicon-social-card.md  2026-06-28.02-adopt-planning-convention.md  2026-06-29.01-per-project-brand-marks.md  2026-06-30.02-docs-ogimage-rollout.md  2026-06-30.03-png-optimization.md  2026-06-30.04-readme-logos.md  2026-06-30.05-profile-badge-tables.md  2026-07-02.02-aiohttp-brand.md  2026-07-02.03-profile-badge-columns.md  2026-07-02.04-aiohttp-surfaces.md  2026-07-04.01-org-tshirt.md  2026-07-05.01-docs-lockup-hero.md  (+7 more)
profile/: README.md
scripts/: check_site_content.sh  gen_logo_svg.py  gen_social_card.py
tests/: conftest.py  test_assets.py  test_geometry.py  test_lockups.py  test_pngopt.py  test_projects.py  test_symbols.py  test_text.py  test_tokens.py
(+37 files in other folders)
