[project]
name = "modern-python-org"
version = "0"
description = "modern-python.org organization homepage"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-material>=9.5",
]

[dependency-groups]
dev = [
    "fonttools>=4.63.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
