[project]
name = "modern-python-org"
version = "0"
description = "modern-python.org organization homepage"
requires-python = ">=3.11"
dependencies = [
    # MkDocs 2.0 is a backward-incompatible rewrite (no plugin system, no theme
    # overrides) that breaks Material for MkDocs, with no migration path. Material
    # 9.7.5+ already caps mkdocs<2; pin both explicitly so a fresh resolve can
    # never pull MkDocs 2.0.
    # https://squidfunk.github.io/mkdocs-material/blog/2026/02/18/mkdocs-2.0/
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.7.5",
]

[dependency-groups]
dev = [
    "fonttools>=4.63.0",
    "pillow>=11.0.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
